feat(workspace): add workspace crud
